--- a/index.html
+++ b/index.html
@@ -672,48 +672,70 @@
     </div>
 
     <!-- Grid -->
-    <div class="mt-8 grid lg:grid-cols-12 gap-6 lg:gap-8 items-start">
-      <!-- Main feature -->
-      <div class="lg:col-span-8">
-        <div class="relative rounded-2xl overflow-hidden ring-1 ring-zinc-200/60 shadow-xl bg-black">
-          <div class="aspect-video">
-            <button class="yt-lite w-full h-full" data-ytid="umMA7-xvtzo"
-                    aria-label="Play video: BRIGHTRAY Data Center Grand Launch & Gala Dinner | Emcee Victoria Tan | Bilingual Hosting"></button>
-          </div>
-          <!-- soft glow -->
-          <div class="pointer-events-none absolute -inset-px rounded-2xl bg-gradient-to-tr from-white/10 to-transparent"></div>
-        </div>
-        <p class="mt-3 text-sm text-zinc-600">
-          BRIGHTRAY Data Center Grand Launch & Gala Dinner | Emcee Victoria Tan | Bilingual Hosting
-        </p>
+   <!-- Grid -->
+<div class="mt-8 grid lg:grid-cols-12 gap-6 lg:gap-8 items-start">
+  <!-- Main feature (NOW: YouTube Short) -->
+  <div class="lg:col-span-8">
+    <div class="relative rounded-2xl overflow-hidden ring-1 ring-zinc-200/60 shadow-xl bg-black">
+      <!-- Shorts is vertical, so use 9:16 and center it -->
+      <div class="aspect-[9/16] max-w-sm mx-auto">
+        <button class="yt-lite w-full h-full"
+                data-ytid="MSdSAJ_AsXg"
+                aria-label="Play video: YouTube Short"></button>
       </div>
+      <!-- soft glow -->
+      <div class="pointer-events-none absolute -inset-px rounded-2xl bg-gradient-to-tr from-white/10 to-transparent"></div>
+    </div>
 
-      <!-- Side videos -->
-      <div class="lg:col-span-4 grid gap-6">
-        <div class="group">
-          <div class="relative rounded-xl overflow-hidden ring-1 ring-zinc-200/60 shadow-md bg-black transition">
-            <div class="aspect-video">
-              <button class="yt-lite w-full h-full" data-ytid="gMbRJ-MBLVc"
-                      aria-label="Play video: Taiwan Expo Smart Taipei AI Pavillion | Emcee Victoria Tan"></button>
-            </div>
-            <div class="pointer-events-none absolute inset-0 rounded-xl group-hover:ring-2 group-hover:ring-wordcolor/40 transition"></div>
-          </div>
-          <p class="mt-2 text-xs text-zinc-600">Taiwan Expo Smart Taipei AI Pavillion</p>
-        </div>
+    <p class="mt-3 text-sm text-zinc-600">
+      Versace Event | Meet & Greet: Thai Celeb
+    </p>
+  </div>
 
-        <div class="group">
-          <div class="relative rounded-xl overflow-hidden ring-1 ring-zinc-200/60 shadow-md bg-black transition">
-            <div class="aspect-video">
-              <button class="yt-lite w-full h-full" data-ytid="kdrErRUqXCU"
-                      aria-label="Play video: Unilever Food Solutions | Future Menus Chef Showcase 2025 | Emcee Victoria Tan"></button>
-            </div>
-            <div class="pointer-events-none absolute inset-0 rounded-xl group-hover:ring-2 group-hover:ring-wordcolor/40 transition"></div>
-          </div>
-          <p class="mt-2 text-xs text-zinc-600">Unilever Food Solutions | Future Menus Chef Showcase 2025 | Emcee Victoria Tan</p>
+  <!-- Side videos (NOW: 3 videos) -->
+  <div class="lg:col-span-4 grid gap-6">
+    <!-- Old main video moved here -->
+    <div class="group">
+      <div class="relative rounded-xl overflow-hidden ring-1 ring-zinc-200/60 shadow-md bg-black transition">
+        <div class="aspect-video">
+          <button class="yt-lite w-full h-full" data-ytid="umMA7-xvtzo"
+                  aria-label="Play video: BRIGHTRAY Data Center Grand Launch & Gala Dinner | Emcee Victoria Tan | Bilingual Hosting"></button>
         </div>
+        <div class="pointer-events-none absolute inset-0 rounded-xl group-hover:ring-2 group-hover:ring-wordcolor/40 transition"></div>
       </div>
+      <p class="mt-2 text-xs text-zinc-600">
+        BRIGHTRAY Data Center Grand Launch & Gala Dinner | Emcee Victoria Tan | Bilingual Hosting
+      </p>
+    </div>
+
+    <!-- Existing side video #1 -->
+    <div class="group">
+      <div class="relative rounded-xl overflow-hidden ring-1 ring-zinc-200/60 shadow-md bg-black transition">
+        <div class="aspect-video">
+          <button class="yt-lite w-full h-full" data-ytid="gMbRJ-MBLVc"
+                  aria-label="Play video: Taiwan Expo Smart Taipei AI Pavillion | Emcee Victoria Tan"></button>
+        </div>
+        <div class="pointer-events-none absolute inset-0 rounded-xl group-hover:ring-2 group-hover:ring-wordcolor/40 transition"></div>
+      </div>
+      <p class="mt-2 text-xs text-zinc-600">Taiwan Expo Smart Taipei AI Pavillion</p>
+    </div>
+
+    <!-- Existing side video #2 -->
+    <div class="group">
+      <div class="relative rounded-xl overflow-hidden ring-1 ring-zinc-200/60 shadow-md bg-black transition">
+        <div class="aspect-video">
+          <button class="yt-lite w-full h-full" data-ytid="kdrErRUqXCU"
+                  aria-label="Play video: Unilever Food Solutions | Future Menus Chef Showcase 2025 | Emcee Victoria Tan"></button>
+        </div>
+        <div class="pointer-events-none absolute inset-0 rounded-xl group-hover:ring-2 group-hover:ring-wordcolor/40 transition"></div>
+      </div>
+      <p class="mt-2 text-xs text-zinc-600">
+        Unilever Food Solutions | Future Menus Chef Showcase 2025 | Emcee Victoria Tan
+      </p>
     </div>
   </div>
+</div>
+
 
   <!-- Curved divider -->
   <div class="custom-shape-divider-bottom-beige">
