--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <script   src="preload.js" defer></script>
   <!-- Swiper (for sliders) -->
 <link rel="stylesheet" href="assets/styles/swiper-bundle.min.css"  media="print" onload="this.media='all'" />
-<link rel="stylesheet" href="mainstyle.css?v=3" media="print" onload="this.media='all'"  />
+<link rel="stylesheet" href="mainstyle.css?v=4" media="print" onload="this.media='all'"  />
 <noscript> 
   <link rel="stylesheet" href="/mainstyle.css?v=12">
   <link rel="stylesheet" href="/styles/swiper-bundle.min.css">
@@ -734,6 +734,7 @@
       </p>
     </div>
   </div>
+</div>
 </div>
 
 
